frida (16.2.5~pirogue1) UNRELEASED; urgency=medium

  * New upstream release.
  * Delete patch:
     - stop-looking-at-main.diff (no longer needed).

 -- Cyril Brulebois <cyril@debamax.com>  Tue, 21 May 2024 23:56:45 +0200

frida (16.1.11~pirogue1) bookworm; urgency=medium

  * New upstream release.

 -- Cyril Brulebois <cyril@debamax.com>  Tue, 21 May 2024 14:24:12 +0200

frida (16.0.19~pirogue1) bookworm; urgency=medium

  * New upstream release.
  * Delete patch:
     - fix-missing-module.diff (no longer needed).
  * Refresh patch:
     - stop-looking-at-main.diff (context updated).
     - adjust-versioning-for-debian-tags.diff (context updated).
  * Add i386 support:
     - control: add i386 to Architecture.
     - rules: add i386 to x86-thin mapping.

 -- Cyril Brulebois <cyril@debamax.com>  Sat, 24 Jun 2023 03:57:01 +0200

frida (15.1.17~pirogue2) bullseye; urgency=medium

  * Add support for amd64:
     - control: add it to Architecture, alongside arm64 and armhf.
     - rules: add a mapping between amd64 and the x86_64-thin set of
       targets. The -thin part is required since otherwise Frida would try
       and perform some crossbuild, getting its wires crossed between x86
       and x86_64 anyway. It only appears elsewhere in the build directory
       (in all cases) and needs to be stripped away.

 -- Cyril Brulebois <cyril@debamax.com>  Mon, 04 Jul 2022 17:51:00 +0200

frida (15.1.17~pirogue1) bullseye; urgency=medium

  * Initial, minimal packaging for the PiRogue (based on bullseye), see
    <https://github.com/PiRogueToolSuite/deb-python> for more information.

 -- Cyril Brulebois <cyril@debamax.com>  Sun, 24 Apr 2022 14:24:50 +0200